# singularitynet

./: .gitattributes  .gitignore  .gitmodules  Makefile  cabal.project.offchain  cabal.project.onchain  flake.nix  setup.sh
.github/workflows/: integrate.yaml
common/: common.cabal  singularitynet-common.cabal
common/src/SingularityNet/: Natural.hs  Settings.hs  Types.hs
frontend/: Makefile  index.d.ts  index.js  package-lock.json  package.json  packages.dhall  spago-packages.nix  spago.dhall  webpack.config.js
frontend/doc/: nix.md  runtime.md
frontend/exe/: BondedApiExample.purs  BondedCallContract.purs  CreatePool.purs  DepositPool.purs  Main.purs  Settings.purs  Types.purs  Utils.purs
frontend/exe/PoolInfo/: BondedPoolAddress.js  BondedPoolAddress.purs  ListNFTSymbol.js  ListNFTSymbol.purs  StateNFTSymbol.js  StateNFTSymbol.purs
frontend/exe/Scripts/: BondedListNFT.purs  BondedPoolValidator.js  BondedPoolValidator.purs  BondedStateNFT.js  BondedStateNFT.purs
frontend/js-example/: index.ts  package-lock.json  package.json  webpack.config.js
frontend/nix/: default.nix
frontend/src/: AdminUtils.purs  CallContract.d.js  CallContract.js  CallContract.purs  ClosePool.purs  CreatePool.purs  DepositPool.purs  SdkApi.purs  Settings.purs  Types.purs  UserStake.purs  UserWithdraw.purs  Utils.js  Utils.purs
frontend/src/BondedStaking/: ClosePool.purs  CreatePool.purs  DepositPool.purs  Queries.purs  TimeUtils.purs  Types.purs  UserStake.purs  UserWithdraw.purs
frontend/src/Scripts/: BondedListNFT.js  BondedListNFT.purs  BondedPoolValidator.js  BondedPoolValidator.purs  BondedStateNFT.js  BondedStateNFT.purs  ListNFT.js  ListNFT.purs  PoolValidator.js  PoolValidator.purs  StateNFT.js  StateNFT.purs
frontend/src/Scripts/UnbondedStaking/: CloseUnbondedPool.purs  CreateUnbondedPool.purs  DepositUnbondedPool.purs  Types.purs
frontend/src/UnbondedStaking/: AdminUtils.purs  ClosePool.purs  CloseUnbondedPool.purs  CreatePool.purs  CreateUnbondedPool.purs  DepositPool.purs  DepositUnbondedPool.purs  Types.purs  UserStake.purs  UserStakeUnbonded.purs  UserWithdraw.purs  UserWithdrawUnbonded.purs  Utils.purs
frontend/ts-example/: README.md  index.ts  package-lock.json  webpack.config.js
offchain/: singularitynet-offchain.cabal  template-project-offchain.cabal
offchain/ctl/: index.js
offchain/ctl/SingularityNet/: BondedValidator.js  BondedValidator.purs  Helpers.purs  MintingPolicy.js  MintingPolicy.purs  Test.purs  Types.purs
offchain/ctl/SingularityNet/Contract/: mintNft.purs
offchain/scripts/: BondedListNFT.plutus  BondedPoolValidator.plutus  BondedStateNFT.plutus
offchain/src/: NPPrelude.hs  SingularityNetOffchain.hs  TemplateProjectOffchain.hs
offchain/test/: Spec.hs  SpecPoolCreate.hs  SpecPoolDeposit.hs  SpecStateNFT.hs  SpecUserStake.hs  Types.hs  Utils.hs
onchain/: Makefile  cabal.project  hie.yaml  singularitynet.cabal  template-project.cabal
onchain/exe/: Serialise.hs
onchain/src/: BondedPool.hs  InductiveLogic.hs  ListNFT.hs  NFT.hs  Numeric.hs  PInterval.hs  PNatural.hs  PTypes.hs  Settings.hs  SingularityNet.hs  StateNFT.hs  TemplateProject.hs  Types.hs  Utils.hs
onchain/src/BondedStaking/: BondedPool.hs  PTypes.hs
onchain/src/Common/: Natural.hs  Settings.hs  Types.hs
onchain/src/Data/: Interval.hs  Natural.hs
onchain/src/UnbondedStaking/: PTypes.hs  Types.hs  UnbondedPool.hs
onchain/test/: Spec.hs  SpecNFT.hs  Utils.hs
onchain/test/Test/: Common.hs  SpecBondedAdmin.hs  SpecNFT.hs  SpecPeriod.hs  Utils.hs
schedule/: SingularityNETStakingPoolGantt.csv
spec/: BondedStakingPoolSpec.tex  README.md  UnbondedStakingPoolSpec.tex
