cabal-version: 3.0
name:          singularitynet-common
version:       0.1
synopsis:      TODO
description:   TODO
homepage:      https://github.com/mlabs-haskell/singularitynet
bug-reports:   https://github.com/mlabs-haskell/singularitynet
license:
license-file:
author:        MLabs
maintainer:    TODO
copyright:     TODO
category:      TODO
build-type:    Simple
tested-with:   GHC ==9.2.1

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/singularitynet

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists -Werror

  mixins:
    base hiding (Prelude),
    npprelude (NPPrelude as Prelude)

  build-depends:
    , base       >=4.14
    , npprelude

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    SingularityNet.Natural
    SingularityNet.Settings
    SingularityNet.Types

  build-depends:
    , generics-sop
    , plutus-ledger-api
    , plutus-tx

  hs-source-dirs:  src

library npprelude
  default-language: Haskell2010
  build-depends:    base
  exposed-modules:  NPPrelude
  hs-source-dirs:   src
