cabal-version:      3.0
name:               singularitynet-offchain
version:            0.1
synopsis:           TODO
description:        TODO
homepage:           https://github.com/mlabs-haskell/singularitynet
bug-reports:        https://github.com/mlabs-haskell/singularitynet
license:
license-file:
author:             MLabs
maintainer:         TODO
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.7
extra-source-files:
  README.md
  scripts/*

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/singularitynet

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists

  ---Werror

  mixins:
    base hiding (Prelude),
    npprelude (NPPrelude as Prelude)

  build-depends:
    , base
    , npprelude

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules: SingularityNetOffchain
  build-depends:
    , aeson
    , plutip
    , plutus-ledger-api

  hs-source-dirs:  src

library npprelude
  default-language: Haskell2010
  build-depends:    base
  exposed-modules:  NPPrelude
  hs-source-dirs:   src

test-suite singularitynet-offchain-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , cardano-prelude            >=0.1.0.0
    , containers                 >=0.6.5.1
    , generics-sop
    , plutip
    , plutus-contract            >=0.1.0.0
    , plutus-ledger              >=0.1.0.0
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-pab                 >=0.1.0.0
    , plutus-tx
    , singularitynet-common
    , singularitynet-offchain
    , tasty                      >=1.4
    , text                       >=1.2.4.1

  ghc-options:    -Wall -threaded -rtsopts
  hs-source-dirs: test

  -- We can only import modules from Common!
  other-modules:
    SpecPoolCreate
    SpecPoolDeposit
    SpecStateNFT
    SpecUserStake
    Types
    Utils
