cabal-version:      3.0
name:               singularitynet
version:            0.1
synopsis:           TODO
description:        TODO
homepage:           https://github.com/mlabs-haskell/singularitynet
bug-reports:        https://github.com/mlabs-haskell/singularitynet
license:
license-file:
author:             MLabs
maintainer:         TODO
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==9.2.1
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/singularitynet

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists
    ---Werror

  mixins:
    base hiding (Prelude),
    pprelude (PPrelude as Prelude)

  build-depends:
    , base      >=4.14
    , pprelude

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
    OverloadedRecordDot
    QualifiedDo

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    BondedPool
    Common.Natural
    Common.Settings
    Common.Types
    ListNFT
    PInterval
    PNatural
    PTypes
    SingularityNet
    StateNFT
    Utils

  build-depends:
    , generics-sop
    , plutarch
    , plutus-ledger-api
    , plutus-tx

  hs-source-dirs:  src

library pprelude
  default-language: Haskell2010
  build-depends:
    , base
    , plutarch

  exposed-modules:  PPrelude
  hs-source-dirs:   src

test-suite singularitynet-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , plutarch
    , plutus-ledger-api
    , QuickCheck
    , quickcheck-instances
    , singularitynet
    , tasty
    , tasty-hunit
    , tasty-quickcheck

  other-modules:
    Test.Common
    Test.SpecNFT
    Test.SpecPeriod
    Test.Utils

  hs-source-dirs: test

executable serialise
  import:         common-lang
  main-is:        Serialise.hs
  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , optparse-applicative
    , plutarch
    , plutus-ledger-api
    , serialise
    , singularitynet
    , text

  hs-source-dirs: exe
